play detail 에 시작/종료 시간 삭제
